# Projects

Chad-Shell-main/: CMakeLists.txt  README.md
Chad-Shell-main/src/: builtins.c  builtins.h  chadshell.c
FFI-STT-main/: .gitignore  MQTTtest.py  README.md  application_profiler.py  config.ini  install.sh  install_models.sh  install_packages.sh  linphone_config  main.py  requirements.txt  test.py  user_manual.md
FFI-STT-main/linphone/: CMakeLists.txt  CustomCoreListener.cpp  Dockerfile  Dockerfile copy  LinphoneCallWrapper.cpp  LinphoneCoreWrapper.cpp  Readme.md  __init__.py  client.conf  entrypoint.sh  linphone.py  linphone_module.cpp  linphone_module.pyi
FFI-STT-main/linphone/include/: CustomCoreListener.hpp  LinphoneCallWrapper.hpp  LinphoneCoreWrapper.hpp
FFI-STT-main/linphone/tests/: linphone_tests.py
FFI-STT-main/mqttclient/: README.md  __init__.py  database.py  mqtt_client.py
FFI-STT-main/testing/vosk_vs_whisper/: 2_min_test_output.txt  libre_text_test.txt  readme.md  requirements.txt
FFI-STT-main/transcriber/: README.md  Whisper installation.txt  text_to_speech.py  transcriber.py  transcriber_base_model.py  vosk_transcriber.py  whisper_transcriber.py
flashy-main/: README.md
flashy-main/flashy-web/: .prettierrc  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json
flashy-main/flashy-web/src/: main.tsx
flashy-main/flashy-web/src/API/: API.ts
tdt4100-prosjekt-tobiaomd-main/: README.md
tdt4100-prosjekt-tobiaomd-main/project/: pom.xml
tobiaomd-main/: .gitpod.yml  README.md
tobiaomd-main/tobiaomd-calc/: pom.xml
(+70 files in other folders)
